--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
-        "cviebrock/eloquent-sluggable": "^4.3",
-        "dimsav/laravel-translatable": "^8",
         "fideloper/proxy": "~3.3",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "unisharp/laravel-filemanager": "~1.8"
